--- a/_posts/游戏开发小技巧/2024-11-26-Unity小技巧-菜单场景.md
+++ b/_posts/游戏开发小技巧/2024-11-26-Unity小技巧-菜单场景.md
@@ -154,7 +154,6 @@ using UnityEngine.Events;
 public class GlobalEventManager : MonoBehaviour
 {
     private static GlobalEventManager _instance;
-
     public static GlobalEventManager Instance
     {
         get
@@ -180,7 +179,6 @@ public class GlobalEventManager : MonoBehaviour
         Debug.Log("TriggerPauseGameRequested was called with isPaused: " + isPaused);
         OnPauseGameRequested.Invoke(isPaused);
     }
-
 }
 
 // 给Button添加监听器，挂载到Canvas上
@@ -258,10 +256,17 @@ public class changeScene : MonoBehaviour
 }
 ```
 
-先说左侧改变颜色的部分，程序开始运行时ColorPanel是看不见的，因此需要用户点击SelectColor来使它出现，而当弹出窗口时我们又希望游戏是暂停状态，所以SelectColor这个Button上在点击时需要绑定两个函数，SelectScene同理，绑定的是暂停游戏的函数和激活ScenePanel函数：
+&emsp; 先说左侧改变颜色的部分，程序开始运行时ColorPanel是看不见的，因此需要用户点击SelectColor来使它出现，而当弹出窗口时我们又希望游戏是暂停状态，所以SelectColor这个Button上在点击时需要绑定两个函数，SelectScene同理，绑定的是暂停游戏的函数和激活ScenePanel函数：
 <img src='/images/skills/Unity开发笔记/Unity小技巧-菜单场景-2、脚本挂载及讲解-颜色弹窗.png' width="1500" style="display: block; margin: 0 auto;">
 
-而ColorPanel，即修改颜色的弹框则简单一些，它的下方包含了四个Button，Red、Green、Blue、Close，前三个Button分别绑定的代码是MenuButton.cs脚本中的changeCubeRed、changeCubeGreen、changeCubeBlue，用来修改滑块的颜色。而Close（右上角的红色块）绑定了两个函数，即让ColorPanel消失以及游戏继续：
+&emsp; 而ColorPanel，即修改颜色的弹框则简单一些，它的下方包含了四个Button，Red、Green、Blue、Close，前三个Button分别绑定的代码是MenuButton.cs脚本中的changeCubeRed、changeCubeGreen、changeCubeBlue，用来修改滑块的颜色。而Close（右上角的红色块）绑定了两个函数，即让ColorPanel消失以及游戏继续：
 <img src='/images/skills/Unity开发笔记/Unity小技巧-菜单场景-2、脚本挂载及讲解-Close.png' width="1500" style="display: block; margin: 0 auto;">
 
+## 3、源码下载及项目不足
 
+&emsp; 或许可能有人看出来了，代码存在一个小问题，就是当两个都弹窗时，如果关闭任意一个的话游戏都将继续。本人想出的解决办法有两种：
+> 1、UI做成递进式的，而非这种并列式的。这个方法比较简单，只需要在最外层的弹窗添加游戏继续运行的程序就行；<br>
+> 2、如果一定要做成并列式的，可能会需要针对两个弹窗设计两套ResumeGame，会比较麻烦。
+
+[Download游戏](files/Unity系列教程/菜单场景/EXE.rar)解压即玩<br>
+[Download工程代码]()
