--- a/_posts/游戏开发小技巧/2024-11-26-Unity小技巧-菜单场景.md
+++ b/_posts/游戏开发小技巧/2024-11-26-Unity小技巧-菜单场景.md
@@ -268,5 +268,5 @@ public class changeScene : MonoBehaviour
 > 1、UI做成递进式的，而非这种并列式的。这个方法比较简单，只需要在最外层的弹窗添加游戏继续运行的程序就行；<br>
 > 2、如果一定要做成并列式的，可能会需要针对两个弹窗设计两套ResumeGame，会比较麻烦。
 
-[Download游戏](files/Unity系列教程/菜单场景/EXE.rar)解压即玩<br>
-[Download工程代码]()
+&emsp; [Download游戏](files/Unity系列教程/菜单场景/EXE.rar)<br>
+&emsp; [Download工程代码](files/Unity系列教程/菜单场景/communication.rar)
