--- a/_posts/2024-10-24-8、妙妙工具网站.md
+++ b/_posts/2024-10-24-8、妙妙工具网站.md
@@ -36,4 +36,7 @@ title: "8、妙妙工具网站"
 &emsp; [歌曲宝](https://www.gequbao.com/)可以免费下载一些VIP音乐。
 <img src='/images/skills/Useful Tools/8、妙妙工具网站/8.4、歌曲下载.png' width="1500" style="display: block; margin: 0 auto;">
 
+## &emsp; 8.5、文件清理 <br> 
+&emsp; [SpaceSniffer](https://www.gequbao.com/)是一个功能强大的文件清理工具。
+<img src='/images/skills/Useful Tools/8、妙妙工具网站/8.5、文件清理.png' width="1500" style="display: block; margin: 0 auto;">
 
