--- a/_posts/2024-10-24-8、妙妙工具网站.md
+++ b/_posts/2024-10-24-8、妙妙工具网站.md
@@ -29,7 +29,7 @@ title: "8、妙妙工具网站"
 <img src='/images/skills/Useful Tools/8、妙妙工具网站/8.2、大圣盘-网盘资源搜索.png' width="1500" style="display: block; margin: 0 auto;">
 
 ## &emsp; 8.3、免登录传输文件 <br> 
-&emsp; 该[网站](https://www.wenshushu.cn/)可以通过关键词搜索指定网盘的一些资源。
+&emsp; 该[网站](https://www.wenshushu.cn/)可以无需登录上传一些文件。
 <img src='/images/skills/Useful Tools/8、妙妙工具网站/8.3、免登录传输.png' width="1500" style="display: block; margin: 0 auto;">
 
 ## &emsp; 8.4、歌曲下载 <br> 
