--- a/_posts/2024-10-27-5、赛博图书馆.md
+++ b/_posts/2024-10-27-5、赛博图书馆.md
@@ -17,6 +17,7 @@ title: "5、赛博图书馆"
 - [5.7、SCI-Hub](https://sci-hub.se/)
 - [5.8、中国古典名著](https://zhuanlan.zhihu.com/p/609049687)
 - [5.9、大模型学习路线](#5.9、大模型学习路线)
+- [5.10、PyQt简易教程](#5.10、PyQt简易教程)
 
 #### &emsp; 5.1、数据分析学习网站 <br> 
 &emsp; 该[网站](https://zh-cn.statisticseasily.com/)可以用来学习数据分析知识。
@@ -60,3 +61,11 @@ title: "5、赛博图书馆"
 
 &emsp; [这个github项目](https://github.com/datawhalechina/llm-cookbook)里包含LLM相关的学习教程。
 &emsp; [这个知乎项目](https://zhuanlan.zhihu.com/p/682611867)也不错，也有pytorch代码。
+
+#### &emsp; [5.10、PyQt简易教程](#5.10、PyQt简易教程) <br> 
+&emsp; 这里罗列出几个不错的PyQt教程：<br>
+[https://blog.csdn.net/qq_51712954/article/details/124049242](https://blog.csdn.net/qq_51712954/article/details/124049242)<br>
+[https://www.zhihu.com/people/xdbcb8/posts?page=1](https://www.zhihu.com/people/xdbcb8/posts?page=1)<br>
+[https://zhuanlan.zhihu.com/p/48373518](https://zhuanlan.zhihu.com/p/48373518)
+
+
