--- a/_posts/2024-10-22-10、优美的语言.md
+++ b/_posts/2024-10-22-10、优美的语言.md
@@ -8,11 +8,16 @@ title: "10、优美的语言"
 #### &emsp; 10.1、诗词 <br> 
 
 #### &emsp; 10.1.1、钗头凤 <br> 
-<div style="text-align: center; font-size: 24px;">
-<strong style="color: red;">《钗头凤·红酥手》——陆游</strong><br>
+<div style="text-align: center; line-height: 1.5; font-size: 18px;">
+    <strong style="color: red;">《钗头凤·红酥手》——陆游</strong><br>
+    <div style="white-space: pre-wrap;">
+        红酥手，黄縢酒，满城春色宫墙柳。<br>
+        东风恶，欢情薄。<br>
+        一怀愁绪，几年离索。错、错、错。<br>
+        <br>
+        春如旧，人空瘦，泪痕红浥鲛绡透。<br>
+        桃花落，闲池阁。<br>
+        山盟虽在，锦书难托。莫、莫、莫！
+    </div>
 </div>
-> 红酥手，黄縢酒，满城春色宫墙柳。东风恶，欢情薄。<br>
-> 一怀愁绪，几年离索。错、错、错。<br>
-> 春如旧，人空瘦，泪痕红浥鲛绡透。桃花落，闲池阁。<br>
-> 山盟虽在，锦书难托。莫、莫、莫！
 
