--- a/_posts/2024-10-22-10、优美的语言.md
+++ b/_posts/2024-10-22-10、优美的语言.md
@@ -11,8 +11,8 @@ title: "10、优美的语言"
 <div style="text-align: center; font-size: 24px;">
 <strong style="color: red;">《钗头凤·红酥手》——陆游</strong><br>
 </div>
-> 红酥手，黄縢酒，满城春色宫墙柳。东风恶，欢情薄。<br>
-> 一怀愁绪，几年离索。错、错、错。<br>
-> 春如旧，人空瘦，泪痕红浥鲛绡透。桃花落，闲池阁。<br>
-> 山盟虽在，锦书难托。莫、莫、莫！
+> &emsp; &emsp; 红酥手，黄縢酒，满城春色宫墙柳。东风恶，欢情薄。<br>
+> &emsp; &emsp; &emsp; &emsp; 一怀愁绪，几年离索。错、错、错。<br>
+> &emsp; &emsp; 春如旧，人空瘦，泪痕红浥鲛绡透。桃花落，闲池阁。<br>
+> &emsp; &emsp; &emsp; &emsp; 山盟虽在，锦书难托。莫、莫、莫！
 
