--- a/_posts/2024-10-22-10、优美的语言.md
+++ b/_posts/2024-10-22-10、优美的语言.md
@@ -11,8 +11,15 @@ title: "10、优美的语言"
 <div style="text-align: center; font-size: 24px;">
 <strong style="color: red;">《钗头凤·红酥手》——陆游</strong><br>
 </div>
-> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 红酥手，黄縢酒，满城春色宫墙柳。东风恶，欢情薄。<br>
-> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 一怀愁绪，几年离索。错、错、错。<br>
-> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 春如旧，人空瘦，泪痕红浥鲛绡透。桃花落，闲池阁。<br>
-> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 山盟虽在，锦书难托。莫、莫、莫！
+> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 红酥手，黄縢酒，满城春色宫墙柳。东风恶，欢情薄。<br>
+> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 一怀愁绪，几年离索。错、错、错。<br>
+> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 春如旧，人空瘦，泪痕红浥鲛绡透。桃花落，闲池阁。<br>
+> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 山盟虽在，锦书难托。莫、莫、莫！
 
+<div style="text-align: center; font-size: 24px;">
+<strong style="color: red;">《钗头凤·世情薄》——唐婉</strong><br>
+</div>
+> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 世情薄，人情恶，雨送黄昏花易落。晓风干，泪痕残。<br>
+> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 欲笺心事，独语斜阑。难，难，难！<br>
+> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 人成各，今非昨，病魂常似秋千索。角声寒，夜阑珊。<br>
+> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 怕人寻问，咽泪装欢。瞒，瞒，瞒！
