--- a/_posts/2024-10-22-10、优美的语言.md
+++ b/_posts/2024-10-22-10、优美的语言.md
@@ -23,3 +23,23 @@ title: "10、优美的语言"
 > &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 欲笺心事，独语斜阑。难，难，难！<br>
 > &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 人成各，今非昨，病魂常似秋千索。角声寒，夜阑珊。<br>
 > &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 怕人寻问，咽泪装欢。瞒，瞒，瞒！
+
+#### &emsp; 10.1.2、卜算子 <br> 
+<div style="text-align: center; font-size: 24px;">
+<strong style="color: red;">《卜算子·咏梅》——毛泽东</strong><br>
+</div>
+> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 风雨送春归，飞雪迎春到。已是悬崖百丈冰，犹有花枝俏。<br>
+> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 俏也不争春，只把春来报。待到山花烂漫时，她在丛中笑。<br>
+
+<div style="text-align: center; font-size: 24px;">
+<strong style="color: red;">《卜算子·咏梅》——陆游</strong><br>
+</div>
+> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 驿外断桥边，寂寞开无主。已是黄昏独自愁，更着风和雨。<br>
+> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 无意苦争春，一任群芳妒。零落成泥碾作尘，只有香如故。<br>
+
+#### &emsp; 10.1.3、武陵春 <br> 
+<div style="text-align: center; font-size: 24px;">
+<strong style="color: red;">《武陵春·春晚》——李清照</strong><br>
+</div>
+> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 风住尘香花已尽，日晚倦梳头。物是人非事事休，欲语泪先流。<br>
+> &emsp; &emsp; &emsp; &emsp; &emsp; 闻说双溪春尚好，也拟泛轻舟。只恐双溪舴艋舟，载不动许多愁。<br>
