--- a/_posts/2024-10-22-10、优美的语言.md
+++ b/_posts/2024-10-22-10、优美的语言.md
@@ -24,7 +24,24 @@ title: "10、优美的语言"
 > &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 人成各，今非昨，病魂常似秋千索。角声寒，夜阑珊。<br>
 > &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 怕人寻问，咽泪装欢。瞒，瞒，瞒！
 
-#### &emsp; 10.1.2、卜算子
+#### &emsp; 10.1.2、江城子
+<div style="text-align: center; font-size: 24px;">
+<strong style="color: red;">《江城子·乙卯正月二十日夜记梦》——苏轼</strong><br>
+</div>
+> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 十年生死两茫茫，不思量，自难忘。千里孤坟，无处话凄凉。<br>
+> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 纵使相逢应不识，尘满面，鬓如霜。<br>
+> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 夜来幽梦忽还乡，小轩窗，正梳妆。相顾无言，惟有泪千行。<br>
+> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 料得年年肠断处，明月夜，短松冈。
+
+<div style="text-align: center; font-size: 24px;">
+<strong style="color: red;">《江城子·密州出猎 》——苏轼</strong><br>
+</div>
+> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 老夫聊发少年狂，左牵黄，右擎苍，锦帽貂裘，千骑卷平冈。<br>
+> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 为报倾城随太守，亲射虎，看孙郎。<br>
+> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 酒酣胸胆尚开张。鬓微霜，又何妨！持节云中，何日遣冯唐？<br>
+> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 会挽雕弓如满月，西北望，射天狼。
+
+#### &emsp; 10.1.3、卜算子
 <div style="text-align: center; font-size: 24px;">
 <strong style="color: red;">《卜算子·咏梅》——毛泽东</strong><br>
 </div>
@@ -37,7 +54,7 @@ title: "10、优美的语言"
 > &emsp; &emsp; &emsp; &emsp; &emsp; 驿外断桥边，寂寞开无主。已是黄昏独自愁，更着风和雨。<br>
 > &emsp; &emsp; &emsp; &emsp; &emsp; 无意苦争春，一任群芳妒。零落成泥碾作尘，只有香如故。<br>
 
-#### &emsp; 10.1.3、武陵春
+#### &emsp; 10.1.4、武陵春
 <div style="text-align: center; font-size: 24px;">
 <strong style="color: red;">《武陵春·春晚》——李清照</strong><br>
 </div>
