--- a/_posts/2024-10-22-10、优美的语言.md
+++ b/_posts/2024-10-22-10、优美的语言.md
@@ -73,25 +73,25 @@ title: "10、优美的语言"
 <div style="text-align: center; font-size: 24px;">
 <strong style="color: red;">《水浒传·第三十九回》——施耐庵</strong><br>
 </div>
-> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 心在山东身在吴,飘蓬江海谩嗟吁。<br>
-> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 他时若遂凌云志,敢笑黄巢不丈夫!<br>
+> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 心在山东身在吴,飘蓬江海谩嗟吁。<br>
+> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 他时若遂凌云志,敢笑黄巢不丈夫!<br>
 
 <div style="text-align: center; font-size: 24px;">
 <strong style="color: red;">《水浒传·第一百一十九回》——施耐庵</strong><br>
 </div>
-> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 平生不修善果，只爱杀人放火。<br>
-> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 忽地顿开金枷，这里扯断玉锁。<br>
-> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 钱塘江上潮信来，今日方知我是我。<br>
+> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 平生不修善果，只爱杀人放火。<br>
+> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 忽地顿开金枷，这里扯断玉锁。<br>
+> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 钱塘江上潮信来，今日方知我是我。<br>
 
 #### &emsp; 10.2.2、燕垒生的诗词
 可以参考这里[https://poetry.cnu.edu.cn/srsz/ddsc/131775.htm](https://poetry.cnu.edu.cn/srsz/ddsc/131775.htm)
 <div style="text-align: center; font-size: 24px;">
 <strong style="color: red;">《天行健（节选）》——燕垒生</strong><br>
 </div>
-> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 巍巍宫阙接天长，九阍帝子欲开疆。<br>
-> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 东城健儿备鞍马，西城健儿市刀枪，<br> 
-> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 家家裁征衣，户户舂军粮。<br> 
-> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 稚儿犹在抱，漫语阿爷早还乡。<br> 
+> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 巍巍宫阙接天长，九阍帝子欲开疆。<br>
+> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 东城健儿备鞍马，西城健儿市刀枪，<br> 
+> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 家家裁征衣，户户舂军粮。<br> 
+> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 稚儿犹在抱，漫语阿爷早还乡。<br> 
 > &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 君不见白骨蔽野纷如雪，高树悲风声飒飒。<br> 
-> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 一朝英雄拔剑起，又是苍生十年劫！<br> 
+> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; 一朝英雄拔剑起，又是苍生十年劫！<br> 
 
