--- a/_posts/2024-10-27-5、赛博图书馆.md
+++ b/_posts/2024-10-27-5、赛博图书馆.md
@@ -59,8 +59,9 @@ title: "5、赛博图书馆"
 &emsp; [这个github项目](https://github.com/datawhalechina/so-large-lm)里包含LLM相关的学习教程。
 <br> <img src='/images/skills/Useful Tools/5、赛博图书馆/5.9、大模型学习教程.png' width="1500" style="display: block; margin: 0 auto;">
 
-&emsp; [这个github项目](https://github.com/datawhalechina/llm-cookbook)里包含LLM相关的学习教程。
+&emsp; [这个github项目](https://github.com/datawhalechina/llm-cookbook)里包含LLM相关的学习教程。<br>
 &emsp; [这个知乎项目](https://zhuanlan.zhihu.com/p/682611867)也不错，也有pytorch代码。
+&emsp; [大佬的网站](https://arthurchiao.art/categories/)这个更全，是一个专门做这些的大佬写得一个网站。
 
 #### &emsp; [5.10、PyQt简易教程](#PyQt简易教程) <br> 
 &emsp; 这里罗列出几个不错的PyQt教程：<br>
