update post tag

--- a/_posts/2024-10-31-1、批量修改.md
+++ b/_posts/2024-10-31-1、批量修改.md
@@ -3,7 +3,7 @@ layout: post
 author: Abhinav Saxena
 title: "1、批量修改文件名字、图片大小"
 tags: [tools, moonwalk]
-categories: ["tools"]
+categories: ["妙妙工具"]
 ---
 
 ## 1、批量修改图片大小和名字
