--- a/_posts/电脑硬件知识/2025-04-20-1、台式机主板接口.md
+++ b/_posts/电脑硬件知识/2025-04-20-1、台式机主板接口.md
@@ -8,8 +8,10 @@ categories: ["电脑硬件知识"]
 
 &emsp; 我相信大多数希望建一个个人网站的人如本人一样，都是为了爱好而非盈利。但是新手在自行摸索的过程中通常会遇到很多问题，比如很多教程要不就是要求很强的前端功底，要不就是不是很详细，遇到一些Bug也很难调试。虽说本人这个网站是基于github上的moonwalk模板建立的，但本人作为一个毫无前端经验的新手，建里个人网站的经历也是一路磕磕绊绊。每当遇到一些让人头疼的问题而在网上找不到解决方法时都会希望网上能有个很详细的教程，随即便想到了鲁迅先生的名言“<strong style="color: red;">此后如竟没有炬火，我便是唯一的光</strong>”。因此本人希望做一个面向新手的建站及修改教程，希望能对大家起到一些帮助。
 
-> 愿中国青年都摆脱冷气，只是向上走，不必听自暴自弃者流的话。能做事的做事，能发声的发声，<strong style="color: red;">有一分热，发一分光，就令萤火一般，也可以在黑暗里发一点光，不必等候炬火。此后如竟没有炬火，我便是唯一的光</strong>。倘若有了炬火，出了太阳，我们自然心悦诚服的消失。不但毫无不平，而且还要随喜赞美这炬火或太阳；因为他照了人类，连我都在内。我又愿中国青年都只是向上走，不必理会这冷笑和暗箭。
 
+主板：电脑的躯干
+
+主板，又叫主机板、系统板或母板，是电脑中电子元件最丰富的硬件，承载着CPU、GPU、内存、硬盘等配件，管理数据流，优化配电，推动不同组件之间的通信。它就像电脑的躯干，为各个硬件提供了连接接口和电路。主板的芯片组决定了其性能上限，不同的芯片组支持的CPU型号、内存规格、扩展能力等有所不同。例如，英特尔的芯片组有X、Z、B、H四个等级，X级用来搭配高档CPU，Z级搭配次高端CPU且支持超频，B级是我们装机常用的性价比之选但不支持超频，H级为入门级别。AMD的芯片组则分为X、B、A系列，功能和英特尔的类似。
 
 ## 1、目录导航
 
