--- a/_posts/电脑硬件知识/2025-04-20-0、电脑硬件介绍.md
+++ b/_posts/电脑硬件知识/2025-04-20-0、电脑硬件介绍.md
@@ -15,6 +15,8 @@ categories: ["电脑硬件知识"]
 
 CPU，全称中央处理器（Central Processing Unit），是电脑的核心部件，就像人的大脑一样，负责解释计算机指令以及处理计算机软件中的数据。它集成了运算器、控制器、寄存器及总线等部分，工作时发热量大，所以需要搭配散热器。目前市场上主流的CPU品牌有英特尔（Intel）和AMD。英特尔的CPU数学运算能力出色，稳定性强；AMD的CPU则更重视3D运算，在同级别价位上相对更实惠，且具备多线程优势。在选购CPU时，我们可以通过型号来判断其性能，比如英特尔的酷睿系列，i3代表入门，i5代表主流，i7代表高端，i9代表旗舰。
 
+&emsp; 主板的芯片组决定了其性能上限，不同的芯片组支持的CPU型号、内存规格、扩展能力等有所不同。例如，英特尔的芯片组有X、Z、B、H四个等级，X级用来搭配高档CPU，Z级搭配次高端CPU且支持超频，B级是我们装机常用的性价比之选但不支持超频，H级为入门级别。AMD的芯片组则分为X、B、A系列，功能和英特尔的类似。
+
 二、主板：电脑的躯干
 
 主板，又叫主机板、系统板或母板，是电脑中电子元件最丰富的硬件，承载着CPU、GPU、内存、硬盘等配件，管理数据流，优化配电，推动不同组件之间的通信。它就像电脑的躯干，为各个硬件提供了连接接口和电路。主板的芯片组决定了其性能上限，不同的芯片组支持的CPU型号、内存规格、扩展能力等有所不同。例如，英特尔的芯片组有X、Z、B、H四个等级，X级用来搭配高档CPU，Z级搭配次高端CPU且支持超频，B级是我们装机常用的性价比之选但不支持超频，H级为入门级别。AMD的芯片组则分为X、B、A系列，功能和英特尔的类似。
@@ -45,6 +47,7 @@ CPU，全称中央处理器（Central Processing Unit），是电脑的核心部
 总结
 
 电脑八大件就像一个团队的八个成员，各自发挥着重要的作用，共同协作让电脑能够稳定运行。CPU是大脑，负责指挥和运算；主板是躯干，承载和连接各个硬件；内存是桥梁，实现数据的快速交换；显卡是魔法师，将数据转化为精美的图像；硬盘是仓库，存储着各种数据；电源是源泉，提供能量；散热器是克星，散发热量；机箱是保护伞，保护硬件。希望通过今天的科普，能让大家对电脑硬件有更深入的了解，在选购和使用电脑时更加得心应手。如果你还有其他关于电脑硬件的问题，欢迎在评论区留言，我们一起交流学习！
+
 
 ## 目录
 - [网站调试](https://huaaorain.github.io/网站调试-代码行间距调试)
