--- a/_posts/电脑硬件知识/2025-04-20-1、台式机主板接口.md
+++ b/_posts/电脑硬件知识/2025-04-20-1、台式机主板接口.md
@@ -6,8 +6,53 @@ categories: ["电脑硬件知识"]
 
 ## 0、什么是主板？
 
-主板，又叫主机板、系统板或母板，是电脑中电子元件最丰富的硬件，承载着CPU、GPU、内存、硬盘等配件，管理数据流，优化配电，推动不同组件之间的通信。它就像电脑的躯干，为各个硬件提供了连接接口和电路。主板的芯片组决定了其性能上限，不同的芯片组支持的CPU型号、内存规格、扩展能力等有所不同。例如，英特尔的芯片组有X、Z、B、H四个等级，X级用来搭配高档CPU，Z级搭配次高端CPU且支持超频，B级是我们装机常用的性价比之选但不支持超频，H级为入门级别。AMD的芯片组则分为X、B、A系列，功能和英特尔的类似。
+&emsp; 主板(Motherboard)，又叫主机板、系统板或母板，是电脑中电子元件最丰富的硬件，承载着CPU、GPU、内存、硬盘等配件，管理数据流，优化配电，推动不同组件之间的通信。它就像电脑的躯干，为各个硬件提供了连接接口和电路。为了保护电子元器件，同时兼顾美观，一些主板上会覆盖一些装甲，如下图。
+<img src='/images/电脑硬件知识/2、主板/0.1、主板附甲对比.jpg' width="1500" style="display: block; margin: 0 auto;"> <br>
+
+&emsp; 主板的芯片组决定了其性能上限，不同的芯片组支持的CPU型号、内存规格、扩展能力等有所不同。例如，英特尔的芯片组有X、Z、B、H四个等级，X级用来搭配高档CPU，Z级搭配次高端CPU且支持超频，B级是我们装机常用的性价比之选但不支持超频，H级为入门级别。AMD的芯片组则分为X、B、A系列，功能和英特尔的类似。
+<img src='/images/电脑硬件知识/2、主板/0.2、主板区域划分.jpg' width="1500" style="display: block; margin: 0 auto;"> <br>
+
+## 1、CPU插槽
+
+市场上存在各种类型的CPU和CPU插槽。通常，主板制造商会说明CPU插槽类型以及主板支持哪些CPU。需要注意的是，CPU 插槽的兼容性会随着CPU的最新发展而不断变化，物理配合并不能保证CPU可以与CPU插槽配合使用（能装进去不一定能用）。这是由于多种设计因素造成的，包括旧主板CPU插槽上的供电系统可能不是为具有更高TDP（热功率设计）的最新CPU 设计的。旧CPU插槽上的某CPU升级过程可能需要更新BIOS以实现兼容性。但是，目前有3种类型的CPU 插槽保持一致，了解这些不同类型的CPU插槽可能有助于您的决策过程。
+<img src='/images/电脑硬件知识/2、主板/0.3、CPU针脚和主板型号对应表.jpg.' width="1500" style="display: block; margin: 0 auto;"> <br>
+
+#### 1.1、CPU插槽数量
+&emsp; 大多数商用主板只有一个 CPU 插槽，有些产品可能在单个主板上有双CPU插槽。双CPU 插槽可能听起来很有趣，它能够立即将系统性能加倍。然而，支持多个CPU同步是非常具有挑战性的，并且经常存在电源和数据分布问题。
+
+#### 1.2、CPU插槽种类
+
+&emsp; （1）PGA
+
+&emsp; PGA 是 Pin Grid Array 的缩写，它是一种零插入力 (ZIF) 插槽，其中CPU上有数千个金属引脚，这些引脚将通过与每个CPU引脚匹配的数千个引脚间隙连接到CPU插槽。ZIF基本上意味着在安装过程中，<strong style="color: red;">您只需轻轻地将CPU放在CPU插槽上，而无需增加任何推力</strong>，这与PCIe卡或内存芯片插槽不同。由于多种原因和优势，AMD今天的大多数CPU都使用 PGA 样式。
+
+&emsp; PGA的优点是引脚足够粗以处理更多电流，与LGA 相比更坚固，并且更易于安装或维修。PGA的缺点是易碎部件或引脚位于CPU上。这意味着您需要在引脚损坏时更换昂贵的 CPU，与更换更便宜的主板相比，这增加了更多的成本。
+<img src='/images/电脑硬件知识/2、主板/1.1、PGA插槽.jpg' width="1500" style="display: block; margin: 0 auto;"> <br>
+
+&emsp; （2）LGA
+
+&emsp; LGA代表Land Grid Array是一种CPU插槽类型，其中金属引脚位于主板上的插槽处，CPU 设计有位于CPU底部的扁平金色接触垫。由于LGA CPU插槽是由针脚网格制成的，因此与脆弱的针脚损坏时更换主板相比，更换主板的成本更低。早在2002年，由于LGA风格的各种原因和优势，英特尔就将其CPU从PGA转换为LGA。
+
+&emsp; LGA CPU 插槽的优点是主板<strong style="color: red;">维修成本更低</strong>，并且与PGA样式相比，<strong style="color: red;">可以在相同空间内安装更多引脚</strong>。CPU每秒不断传输32位或64位数据数十亿次。更多的物理引脚连接器等于对额外功率和更快速度的额外支持。缺点是LGA引脚更薄且更脆弱，这使得修复损坏的引脚变得更加困难。
+<img src='/images/电脑硬件知识/2、主板/1.2、LGA插槽.jpg' width="1500" style="display: block; margin: 0 auto;"> <br>
+
+&emsp; （3）BGA
+
+&emsp; BGA或球栅阵列是一种CPU插槽类型，需要在安装过程中使用微小的焊粉将CPU焊接在CPU插槽上，从而在CPU和CPU插槽之间建立更牢固的结合和永久链接。BGA是一种<strong style="color: red;">不太推荐的样式</strong>，特别是对于个人设置，因为其安装过程复杂。BGA 更常用于笔记本电脑或使用无引脚CPU并将处理器直接焊接在主板上的测试应用程序。
+
+&emsp; BGA的优点是它<strong style="color: red;">更耐用，需要的空间更小，并提供更精确和更快的连接</strong>。BGA的缺点是需要特殊工具安装，安装过程复杂，永久安装，不可复制。
 
 ## 1、主板尺寸
 
-&emsp; 虽说是面向新手的教程，但是最好是具有一定编程功底，或者可以大致理解代码的内容：
+
+
+## 
+
+
+## 参考文献
+
+[硬件茶谈-装机教程](https://www.bilibili.com/video/BV1BG4y137mG/?spm_id_from=333.1387.favlist.content.click&vd_source=d5bf9778119412295721f01394ea745e)
+
+[硬件茶谈-从零开始认识主板](https://www.bilibili.com/video/BV1xQ4y1b7JS/?spm_id_from=333.1387.favlist.content.click&vd_source=d5bf9778119412295721f01394ea745e)
+
+[CPU 插槽是什么，它是如何工作的？](https://zhuanlan.zhihu.com/p/405316344)
