--- a/_posts/电脑硬件知识/2025-04-20-1、台式机主板接口.md
+++ b/_posts/电脑硬件知识/2025-04-20-1、台式机主板接口.md
@@ -8,13 +8,12 @@ categories: ["电脑硬件知识"]
 
 &emsp; 主板(Motherboard)，又叫主机板、系统板或母板，是电脑中电子元件最丰富的硬件，承载着CPU、GPU、内存、硬盘等配件，管理数据流，优化配电，推动不同组件之间的通信。它就像电脑的躯干，为各个硬件提供了连接接口和电路。为了保护电子元器件，同时兼顾美观，一些主板上会覆盖一些装甲，如下图。
 <img src='/images/电脑硬件知识/2、主板/0.1、主板附甲对比.jpg' width="1500" style="display: block; margin: 0 auto;"> <br>
-
 &emsp; 主板的芯片组决定了其性能上限，不同的芯片组支持的CPU型号、内存规格、扩展能力等有所不同。例如，英特尔的芯片组有X、Z、B、H四个等级，X级用来搭配高档CPU，Z级搭配次高端CPU且支持超频，B级是我们装机常用的性价比之选但不支持超频，H级为入门级别。AMD的芯片组则分为X、B、A系列，功能和英特尔的类似。
 <img src='/images/电脑硬件知识/2、主板/0.2、主板区域划分.jpg' width="1500" style="display: block; margin: 0 auto;"> <br>
 
 ## 1、CPU插槽
 
-市场上存在各种类型的CPU和CPU插槽。通常，主板制造商会说明CPU插槽类型以及主板支持哪些CPU。需要注意的是，CPU 插槽的兼容性会随着CPU的最新发展而不断变化，物理配合并不能保证CPU可以与CPU插槽配合使用（能装进去不一定能用）。这是由于多种设计因素造成的，包括旧主板CPU插槽上的供电系统可能不是为具有更高TDP（热功率设计）的最新CPU 设计的。旧CPU插槽上的某CPU升级过程可能需要更新BIOS以实现兼容性。但是，目前有3种类型的CPU 插槽保持一致，了解这些不同类型的CPU插槽可能有助于您的决策过程。
+&emsp; 市场上存在各种类型的CPU和CPU插槽。通常，主板制造商会说明CPU插槽类型以及主板支持哪些CPU。需要注意的是，CPU 插槽的兼容性会随着CPU的最新发展而不断变化，物理配合并不能保证CPU可以与CPU插槽配合使用（能装进去不一定能用）。这是由于多种设计因素造成的，包括旧主板CPU插槽上的供电系统可能不是为具有更高TDP（热功率设计）的最新CPU 设计的。旧CPU插槽上的某CPU升级过程可能需要更新BIOS以实现兼容性。但是，目前有3种类型的CPU 插槽保持一致，了解这些不同类型的CPU插槽可能有助于您的决策过程。
 <img src='/images/电脑硬件知识/2、主板/0.3、CPU针脚和主板型号对应表.jpg.' width="1500" style="display: block; margin: 0 auto;"> <br>
 
 #### 1.1、CPU插槽数量
@@ -22,7 +21,7 @@ categories: ["电脑硬件知识"]
 
 #### 1.2、CPU插槽种类
 
-&emsp; （1）PGA
+&emsp; <strong style="color: black;">（1）PGA</strong>
 
 &emsp; PGA 是 Pin Grid Array 的缩写，它是一种零插入力 (ZIF) 插槽，其中CPU上有数千个金属引脚，这些引脚将通过与每个CPU引脚匹配的数千个引脚间隙连接到CPU插槽。ZIF基本上意味着在安装过程中，<strong style="color: red;">您只需轻轻地将CPU放在CPU插槽上，而无需增加任何推力</strong>，这与PCIe卡或内存芯片插槽不同。由于多种原因和优势，AMD今天的大多数CPU都使用 PGA 样式。
 
