--- a/_posts/电脑硬件知识/2025-04-20-1、台式机主板接口.md
+++ b/_posts/电脑硬件知识/2025-04-20-1、台式机主板接口.md
@@ -14,7 +14,7 @@ categories: ["电脑硬件知识"]
 ## 1、CPU插槽
 
 &emsp; 市场上存在各种类型的CPU和CPU插槽。通常，主板制造商会说明CPU插槽类型以及主板支持哪些CPU。需要注意的是，CPU 插槽的兼容性会随着CPU的最新发展而不断变化，物理配合并不能保证CPU可以与CPU插槽配合使用（能装进去不一定能用）。这是由于多种设计因素造成的，包括旧主板CPU插槽上的供电系统可能不是为具有更高TDP（热功率设计）的最新CPU 设计的。旧CPU插槽上的某CPU升级过程可能需要更新BIOS以实现兼容性。但是，目前有3种类型的CPU 插槽保持一致，了解这些不同类型的CPU插槽可能有助于您的决策过程。
-<img src='/images/电脑硬件知识/2、主板/0.3、CPU针脚和主板型号对应表.jpg.' width="1500" style="display: block; margin: 0 auto;"> <br>
+<img src='/images/电脑硬件知识/2、主板/0.3、CPU针脚和主板型号对应表.jpg' width="1000" style="display: block; margin: 0 auto;"> <br>
 
 #### 1.1、CPU插槽数量
 &emsp; 大多数商用主板只有一个 CPU 插槽，有些产品可能在单个主板上有双CPU插槽。双CPU 插槽可能听起来很有趣，它能够立即将系统性能加倍。然而，支持多个CPU同步是非常具有挑战性的，并且经常存在电源和数据分布问题。
