--- a/_posts/电脑硬件知识/2025-04-20-1、台式机主板接口.md
+++ b/_posts/电脑硬件知识/2025-04-20-1、台式机主板接口.md
@@ -27,8 +27,7 @@ categories: ["电脑硬件知识"]
 &emsp; PGA 是 Pin Grid Array 的缩写，它是一种零插入力 (ZIF) 插槽，其中CPU上有数千个金属引脚，这些引脚将通过与每个CPU引脚匹配的数千个引脚间隙连接到CPU插槽。ZIF基本上意味着在安装过程中，<strong style="color: red;">您只需轻轻地将CPU放在CPU插槽上，而无需增加任何推力</strong>，这与PCIe卡或内存芯片插槽不同。由于多种原因和优势，AMD今天的大多数CPU都使用 PGA 样式。
 
 &emsp; PGA的优点是引脚足够粗以处理更多电流，与LGA 相比更坚固，并且更易于安装或维修。PGA的缺点是易碎部件或引脚位于CPU上。这意味着您需要在引脚损坏时更换昂贵的 CPU，与更换更便宜的主板相比，这增加了更多的成本。
-<img src='/images/电脑硬件知识/2、主板/1.1、PGA插槽.jpg' width="1500" style="display: block; margin: 0 auto;"> <br>
-
+<img src='/images/电脑硬件知识/2、主板/1.1、PGA插槽.jpg' width="1500" style="display: block; margin: 0 auto;">
 &emsp; （2）LGA
 
 &emsp; LGA代表Land Grid Array是一种CPU插槽类型，其中金属引脚位于主板上的插槽处，CPU 设计有位于CPU底部的扁平金色接触垫。由于LGA CPU插槽是由针脚网格制成的，因此与脆弱的针脚损坏时更换主板相比，更换主板的成本更低。早在2002年，由于LGA风格的各种原因和优势，英特尔就将其CPU从PGA转换为LGA。
