--- a/_posts/电脑硬件知识/2025-04-20-1、台式机主板接口.md
+++ b/_posts/电脑硬件知识/2025-04-20-1、台式机主板接口.md
@@ -23,20 +23,16 @@ categories: ["电脑硬件知识"]
 #### 1.2、CPU插槽种类
 
 &emsp; <strong style="color: black;">（1）PGA</strong>
-
 &emsp; PGA 是 Pin Grid Array 的缩写，它是一种零插入力 (ZIF) 插槽，其中CPU上有数千个金属引脚，这些引脚将通过与每个CPU引脚匹配的数千个引脚间隙连接到CPU插槽。ZIF基本上意味着在安装过程中，<strong style="color: red;">您只需轻轻地将CPU放在CPU插槽上，而无需增加任何推力</strong>，这与PCIe卡或内存芯片插槽不同。由于多种原因和优势，AMD今天的大多数CPU都使用 PGA 样式。
 
 &emsp; PGA的优点是引脚足够粗以处理更多电流，与LGA 相比更坚固，并且更易于安装或维修。PGA的缺点是易碎部件或引脚位于CPU上。这意味着您需要在引脚损坏时更换昂贵的 CPU，与更换更便宜的主板相比，这增加了更多的成本。
 <img src='/images/电脑硬件知识/2、主板/1.1、PGA插槽.jpg' width="1500" style="display: block; margin: 0 auto;">
-&emsp; （2）LGA
-
+&emsp; <strong style="color: black;">（2）LGA</strong>
 &emsp; LGA代表Land Grid Array是一种CPU插槽类型，其中金属引脚位于主板上的插槽处，CPU 设计有位于CPU底部的扁平金色接触垫。由于LGA CPU插槽是由针脚网格制成的，因此与脆弱的针脚损坏时更换主板相比，更换主板的成本更低。早在2002年，由于LGA风格的各种原因和优势，英特尔就将其CPU从PGA转换为LGA。
 
 &emsp; LGA CPU 插槽的优点是主板<strong style="color: red;">维修成本更低</strong>，并且与PGA样式相比，<strong style="color: red;">可以在相同空间内安装更多引脚</strong>。CPU每秒不断传输32位或64位数据数十亿次。更多的物理引脚连接器等于对额外功率和更快速度的额外支持。缺点是LGA引脚更薄且更脆弱，这使得修复损坏的引脚变得更加困难。
-<img src='/images/电脑硬件知识/2、主板/1.2、LGA插槽.jpg' width="1500" style="display: block; margin: 0 auto;"> <br>
-
-&emsp; （3）BGA
-
+<img src='/images/电脑硬件知识/2、主板/1.2、LGA插槽.jpg' width="1500" style="display: block; margin: 0 auto;">
+&emsp; <strong style="color: black;">（3）BGA</strong>
 &emsp; BGA或球栅阵列是一种CPU插槽类型，需要在安装过程中使用微小的焊粉将CPU焊接在CPU插槽上，从而在CPU和CPU插槽之间建立更牢固的结合和永久链接。BGA是一种<strong style="color: red;">不太推荐的样式</strong>，特别是对于个人设置，因为其安装过程复杂。BGA 更常用于笔记本电脑或使用无引脚CPU并将处理器直接焊接在主板上的测试应用程序。
 
 &emsp; BGA的优点是它<strong style="color: red;">更耐用，需要的空间更小，并提供更精确和更快的连接</strong>。BGA的缺点是需要特殊工具安装，安装过程复杂，永久安装，不可复制。
