--- a/_posts/电脑硬件知识/2025-04-20-1、台式机主板接口.md
+++ b/_posts/电脑硬件知识/2025-04-20-1、台式机主板接口.md
@@ -37,6 +37,33 @@ categories: ["电脑硬件知识"]
 
 &emsp; BGA的优点是它<strong style="color: red;">更耐用，需要的空间更小，并提供更精确和更快的连接</strong>。BGA的缺点是需要特殊工具安装，安装过程复杂，永久安装，不可复制。
 
+## 2、CPU供电
+
+#### 2.1、CPU供电接口
+&emsp; CPU供电接口有几根针脚就是几Pin接口，8针，4针还是6针(图形卡单独供电)，它只有一个用途：通过这个接口为设备提供12V电源。一般情况下8Pin接口可以提供350W左右的供电。
+&emsp; <strong style="color: black;">（1）4 Pin</strong>
+&emsp; 一些低端主板常用4 Pin供电。
+<img src='/images/电脑硬件知识/2、主板/2.1、4Pin接口.jpg' width="700" style="display: block; margin: 0 auto;">
+
+&emsp; <strong style="color: black;">（2）8 Pin</strong>
+&emsp; 正常情况下是8Pin供电。
+<img src='/images/电脑硬件知识/2、主板/2.2、8Pin接口.jpg' width="500" style="display: block; margin: 0 auto;">
+
+&emsp; <strong style="color: black;">（3）12 Pin</strong>
+&emsp; 部分高端主板使用12Pin供电，由8Pin + 4Pin构成。
+<img src='/images/电脑硬件知识/2、主板/2.3、12Pin接口.jpg' width="500" style="display: block; margin: 0 auto;">
+
+&emsp; <strong style="color: black;">（4）16 Pin</strong>
+&emsp; 也有少数顶级主板使用异常版本的双8针电源设计(ASUS TRX40-PRO)。这些主板大多数用于大功率CPU，例如Inteli9 X系列。电源是计算机稳定运行的前提。
+<img src='/images/电脑硬件知识/2、主板/2.4、16Pin接口.jpg' width="500" style="display: block; margin: 0 auto;">
+
+&emsp; <strong style="color: black;">（5）24 Pin</strong>
+&emsp; 此外，在某些旗舰主板上，我们还可以看到带有3个8pin CPU电源接口的设计。理论上，这相当于1008W±5%的功率输入。一般来说，这样的设计只有两个目的，一个是在极端超频期间满足瞬时功率，但更多时候是为了更好地分配电流，并
+尽可能减少CPU电源接口的热量。对于需要长时间长时间完全装载CPU的平台，例如，个人工作站更为有利。对于这样的平台，我们认为插入所有电源端口更加可靠。
+<img src='/images/电脑硬件知识/2、主板/2.5、24Pin接口.jpg' width="500" style="display: block; margin: 0 auto;">
+
+#### 2.2、CPU供电模块
+
 ## 1、主板尺寸
 
 
@@ -51,3 +78,7 @@ categories: ["电脑硬件知识"]
 [硬件茶谈-从零开始认识主板](https://www.bilibili.com/video/BV1xQ4y1b7JS/?spm_id_from=333.1387.favlist.content.click&vd_source=d5bf9778119412295721f01394ea745e)
 
 [CPU 插槽是什么，它是如何工作的？](https://zhuanlan.zhihu.com/p/405316344)
+
+[超详细！主板CPU对照表！intel篇，主板接口对应CPU，建议收藏](https://www.zhihu.com/tardis/bd/art/504277704)
+
+[计算机主板cpu的电源接口类型,给力：主板CPU电源的4pin和8pin有什么区别？](https://blog.csdn.net/weixin_39631350/article/details/118985611?fromshare=blogdetail&sharetype=blogdetail&sharerId=118985611&sharerefer=PC&sharesource=&sharefrom=from_link)
