--- a/_posts/电脑硬件知识/2025-04-20-2、台式机主板接口.md
+++ b/_posts/电脑硬件知识/2025-04-20-2、台式机主板接口.md
@@ -73,7 +73,13 @@ categories: ["电脑硬件知识"]
 
 #### 2.2、CPU供电模块
 
-## 1、主板尺寸
+&emsp; CPU供电接口会向CPU输入+12V的供电，但是CPU的工作电压大多在1.3V内，所以在CPU周围有很多MOS管、电感、电容，和左上角的PWM一起组成了CPU的供电模块，负责将12V电压转换为CPU需要的电压。
+<img src='/images/电脑硬件知识/2、主板/3.1、CPU降压.jpg' width="500" style="display: block; margin: 0 auto;">
+&emsp; 一个电感和一个MOS管就是一个供电相。但是一个供电相供电能力有限，所以现在主板都采用多相供电。现在一般说的主板CPU供电有多强，指的是每一相能承受的电流大小，及总供电相数，如战神Z790，有27相，其中24相给CPU供电，每一相在15度下可以承受105A的电流，另外3相给CPU内置的核显及其他元器件供电
+<img src='/images/电脑硬件知识/2、主板/3.2、CPU供电能力.jpg' width="500" style="display: block; margin: 0 auto;">
+
+
+## 3、主板尺寸
 
 
 
