--- a/_posts/电脑小技巧/2025-03-28-2、U盘启动盘恢复.md
+++ b/_posts/电脑小技巧/2025-03-28-2、U盘启动盘恢复.md
@@ -18,12 +18,12 @@ categories: ["电脑小技巧"]
 &emsp; <strong style="color: black;">（2）打开cmd命令行</strong>
 
 &emsp; 使用“WIN+R”打开运行对话框，输入cmd打开DOS命令运行环境，输入diskpart，按下回车，打开磁盘的DOS命令运行环境。
-<img src='/images/电脑小技巧/2、U盘启动盘恢复/1.2、找到目标U盘.jpg' width="1000" style="display: block; margin: 0 auto;">
+<img src='/images/电脑小技巧/2、U盘启动盘恢复/1.2、打开cmd.jpg' width="1000" style="display: block; margin: 0 auto;">
 
 &emsp; <strong style="color: black;">（3）查看磁盘列表</strong>
 
 &emsp; 输入list disk查看磁盘列表。
-<img src='/images/电脑小技巧/2、U盘启动盘恢复/1.2、找到目标U盘.jpg' width="1000" style="display: block; margin: 0 auto;">
+<img src='/images/电脑小技巧/2、U盘启动盘恢复/1.3、查看disk列表.jpg' width="1000" style="display: block; margin: 0 auto;">
 
 &emsp; <strong style="color: black;">（4）选择并清除U盘</strong>
 
