--- a/_posts/网站调试小技巧（moonwalk）/2024-11-29-2、新建专栏.md
+++ b/_posts/网站调试小技巧（moonwalk）/2024-11-29-2、新建专栏.md
@@ -49,4 +49,13 @@ categories: ["网站调试"]
 
 &emsp; <strong style="color: black;">（3）home.html的配置</strong>
 
-&emsp; home.html是
+&emsp; home.html是呈现网页中专栏内容的相关配置，每个专栏的模板如下：
+> {% if site.theme_config.show_projects == true %}
+>   <h2>{{ site.theme_config.home.magic_web_projects }}</h2>
+>   {% include card_list.html collection=site.data.home.magic_web_entries %}
+> {% endif %}
+
+&emsp; 以模板为例，需要修改三个参数：
+<img src='/images/网站调试/2、新建专栏/1.3、home.html配置.jpg' width="1500" style="display: block; margin: 0 auto;">
+
+&emsp; 这三个参数在哪里添加在下面会说明，也可以用Ctrl+Shift+F直接查找然后修改模板。
