--- a/_posts/网站调试小技巧（moonwalk）/2024-11-29-2、新建专栏.md
+++ b/_posts/网站调试小技巧（moonwalk）/2024-11-29-2、新建专栏.md
@@ -29,8 +29,6 @@ categories: ["网站调试"]
 > (6) images：这个文件夹下面放的是网站上用到的一些图片；
 > (7) _config.yml：这个是网站内容的配置文件，非常重要。
 
-
-<<<<<<< HEAD
 &emsp; <strong style="color: black;">（2）home.yml的配置</strong>
 
 &emsp; home.yml中是所有专栏、blog的总览，可以在这里选择是否使某个blog出现在网站上。
@@ -48,13 +46,11 @@ categories: ["网站调试"]
 
 &emsp; <strong style="color: black;">（3）home.html的配置</strong>
 
-<<<<<<< HEAD
-<<<<<<< HEAD
 &emsp; home.html是呈现网页中专栏内容的相关配置，每个专栏的模板如下：
-> {% if site.theme_config.专栏名字_projects == true %}
+<!-- > {% if site.theme_config.专栏名字_projects == true %}
 >   <h2>{{ site.theme_config.home.title_专栏名字_projects }}</h2>
 >   {% include card_list.html collection=site.data.home.专栏名字_entries %}
-> {% endif %}
+> {% endif %} -->
 
 &emsp; 以模板为例，需要修改三个参数：
 > （1）专栏名字_projects；
