--- a/_posts/网站调试小技巧（moonwalk）/2024-11-29-2、新建专栏.md
+++ b/_posts/网站调试小技巧（moonwalk）/2024-11-29-2、新建专栏.md
@@ -34,7 +34,7 @@ categories: ["网站调试"]
 &emsp; home.yml中是所有专栏、blog的总览，可以在这里选择是否使某个blog出现在网站上。
 <img src='/images/网站调试/2、新建专栏/1.2、home配置.jpg' width="1500" style="display: block; margin: 0 auto;">
 
-> project1_entries: # 这个是新建的专栏-project1
+<!-- > project1_entries: # 这个是新建的专栏-project1
 >   - title: blog的标题
 >     url: blog的链接
 >     desc: 该blog的内容描述
@@ -47,10 +47,10 @@ categories: ["网站调试"]
 &emsp; <strong style="color: black;">（3）home.html的配置</strong>
 
 &emsp; home.html是呈现网页中专栏内容的相关配置，每个专栏的模板如下：
-<!-- > {% if site.theme_config.专栏名字_projects == true %}
+> {% if site.theme_config.专栏名字_projects == true %}
 >   <h2>{{ site.theme_config.home.title_专栏名字_projects }}</h2>
 >   {% include card_list.html collection=site.data.home.专栏名字_entries %}
-> {% endif %} -->
+> {% endif %}
 
 &emsp; 以模板为例，需要修改三个参数：
 > （1）专栏名字_projects；
@@ -71,5 +71,5 @@ categories: ["网站调试"]
 
 &emsp; 2）专栏名字_entries；
 &emsp; 第三个参数在home.yml中，具体为下：
-<img src='/images/网站调试/2、新建专栏/1.5、第三个参数.jpg' width="1500" style="display: block; margin: 0 auto;">
+<img src='/images/网站调试/2、新建专栏/1.5、第三个参数.jpg' width="1500" style="display: block; margin: 0 auto;"> -->
 
