--- a/_posts/网站调试小技巧（moonwalk）/2024-11-29-2、新建专栏.md
+++ b/_posts/网站调试小技巧（moonwalk）/2024-11-29-2、新建专栏.md
@@ -20,7 +20,7 @@ categories: ["网站调试"]
 &emsp; 打开VSCode后，侧边栏如下：
 <img src='/images/网站调试/2、新建专栏/1.1、侧边栏.jpg' width="700" style="display: block; margin: 0 auto;">
 
-&emsp; 侧边栏中几个部分需要注意：
+<!-- &emsp; 侧边栏中几个部分需要注意：
 >（1）_includes：这个文件夹下面的html文件是网站的显示配置，后面会详细说；
 > (2) _layouts：这个文件夹下面的html也是网站如何显示的相关配置，这个后面会重点说；
 > (3) _posts：这部分放的是更新的blog，后续想添加的话往这里按照格式添加就行；
@@ -32,7 +32,7 @@ categories: ["网站调试"]
 &emsp; <strong style="color: black;">（2）home.yml的配置</strong>
 
 &emsp; home.yml中是所有专栏、blog的总览，可以在这里选择是否使某个blog出现在网站上。
-<img src='/images/网站调试/2、新建专栏/1.2、home配置.jpg' width="1500" style="display: block; margin: 0 auto;">
+<img src='/images/网站调试/2、新建专栏/1.2、home配置.jpg' width="1500" style="display: block; margin: 0 auto;"> -->
 
 <!-- > project1_entries: # 这个是新建的专栏-project1
 >   - title: blog的标题
