--- a/_posts/网站调试小技巧（moonwalk）/2024-11-29-2、新增专栏.md
+++ b/_posts/网站调试小技巧（moonwalk）/2024-11-29-2、新增专栏.md
@@ -12,3 +12,10 @@ categories: ["网站调试"]
 <img src='/images/网站调试/2、新建专栏/0.1、什么是专栏.jpg' width="1000" style="display: block; margin: 0 auto;">
 
 &emsp; 上图中包含了两个专栏，本教程的目的为新建一个如上图的专栏。
+
+## 1、修改工程配置及添加文件
+
+&emsp; <strong style="color: black;">（1）打开工程</strong>
+
+&emsp; 打开VSCode后，侧边栏如下：
+<img src='/images/网站调试/2、新建专栏/1.1、侧边栏.jpg' width="700" style="display: block; margin: 0 auto;">
