--- a/_posts/网站调试小技巧（moonwalk）/2024-11-29-2、新增专栏.md
+++ b/_posts/网站调试小技巧（moonwalk）/2024-11-29-2、新增专栏.md
@@ -20,7 +20,7 @@ categories: ["网站调试"]
 &emsp; 打开VSCode后，侧边栏如下：
 <img src='/images/网站调试/2、新建专栏/1.1、侧边栏.jpg' width="700" style="display: block; margin: 0 auto;">
 
-```ruby
+```html
 {% raw %}
 {% if site.theme_config.专栏名字_projects == true %}
   <h2>{{ site.theme_config.home.title_专栏名字_projects }}</h2>
