--- a/_posts/网站调试小技巧（moonwalk）/2024-11-29-2、新增专栏.md
+++ b/_posts/网站调试小技巧（moonwalk）/2024-11-29-2、新增专栏.md
@@ -34,7 +34,7 @@ categories: ["网站调试"]
 &emsp; home.yml中是所有专栏、blog的总览，可以在这里选择是否使某个blog出现在网站上。
 <img src='/images/网站调试/2、新建专栏/1.2、home配置.jpg' width="1500" style="display: block; margin: 0 auto;">
 
-> project1_entries: # 这个是新建的专栏-project1
+> project1_entries: # 这个是新建的专栏-project1 <br>
 >   - title: blog的标题
 >     url: blog的链接
 >     desc: 该blog的内容描述
