--- a/_posts/网站调试小技巧（moonwalk）/2024-11-29-2、新增专栏.md
+++ b/_posts/网站调试小技巧（moonwalk）/2024-11-29-2、新增专栏.md
@@ -21,8 +21,8 @@ categories: ["网站调试"]
 <img src='/images/网站调试/2、新建专栏/1.1、侧边栏.jpg' width="700" style="display: block; margin: 0 auto;">
 
 &emsp; 侧边栏中几个部分需要注意：
->（1）_includes：这个文件夹下面的html文件是网站的显示配置，后面会详细说；
-> (2) _layouts：这个文件夹下面的html也是网站如何显示的相关配置，这个后面会重点说；
+>（1）_includes：这个文件夹下面的html文件是网站的显示配置，后面会详细说； <br>
+> (2) _layouts：这个文件夹下面的html也是网站如何显示的相关配置，这个后面会重点说； <br>
 > (3) _posts：这部分放的是更新的blog，后续想添加的话往这里按照格式添加就行；
 > (4) _sass：这个文件夹下面放的是网站模板样式的设置；
 > (5) files：这个文件夹下面放的是放到网站上的一些网页；
