--- a/_posts/网站调试小技巧（moonwalk）/2024-11-29-2、新增专栏.md
+++ b/_posts/网站调试小技巧（moonwalk）/2024-11-29-2、新增专栏.md
@@ -21,12 +21,12 @@ categories: ["网站调试"]
 <img src='/images/网站调试/2、新建专栏/1.1、侧边栏.jpg' width="700" style="display: block; margin: 0 auto;">
 
 &emsp; 侧边栏中几个部分需要注意：
->（1）_includes：这个文件夹下面的html文件是网站的显示配置，后面会详细说； <br>
-> (2) _layouts：这个文件夹下面的html也是网站如何显示的相关配置，这个后面会重点说； <br>
-> (3) _posts：这部分放的是更新的blog，后续想添加的话往这里按照格式添加就行；
-> (4) _sass：这个文件夹下面放的是网站模板样式的设置；
-> (5) files：这个文件夹下面放的是放到网站上的一些网页；
-> (6) images：这个文件夹下面放的是网站上用到的一些图片；
+>（1）_includes：文件夹包含html文件是网站的显示配置，后面会详细说； <br>
+> (2) _layouts：文件夹包含网站如何显示的相关配置，这个后面会重点说； <br>
+> (3) _posts：文件夹包含所有的blog，后续想添加的话往这里按照格式添加就行； <br>
+> (4) _sass：文件夹包含网站模板样式的设置； <br>
+> (5) files：文件夹包含放到网站上的一些网页上下载的文件； <br>
+> (6) images：文件夹包含网站上用到的一些图片； <br>
 > (7) _config.yml：这个是网站内容的配置文件，非常重要。
 
 &emsp; <strong style="color: black;">（2）home.yml的配置</strong>
