--- a/_posts/网站调试小技巧（moonwalk）/2024-11-29-2、新增专栏.md
+++ b/_posts/网站调试小技巧（moonwalk）/2024-11-29-2、新增专栏.md
@@ -21,6 +21,7 @@ categories: ["网站调试"]
 <img src='/images/网站调试/2、新建专栏/1.1、侧边栏.jpg' width="700" style="display: block; margin: 0 auto;">
 
 &emsp; 侧边栏中几个部分需要注意：
+
 >（1）_includes：文件夹包含html文件是网站的显示配置，后面会详细说； <br>
 > (2) _layouts：文件夹包含网站如何显示的相关配置，这个后面会重点说； <br>
 > (3) _posts：文件夹包含所有的blog，后续想添加的话往这里按照格式添加就行； <br>
@@ -35,13 +36,13 @@ categories: ["网站调试"]
 <img src='/images/网站调试/2、新建专栏/1.2、home配置.jpg' width="1500" style="display: block; margin: 0 auto;">
 
 > project1_entries: # 这个是新建的专栏-project1 <br>
->   - title: blog的标题
->     url: blog的链接
+>   - title: blog的标题 <br>
+>     url: blog的链接 <br>
 >     desc: 该blog的内容描述
 >
-> project2_entries: # 这个是新建的专栏-project2
->   - title: blog的标题
->     url: blog的链接
+> project2_entries: # 这个是新建的专栏-project2 <br>
+>   - title: blog的标题 <br>
+>     url: blog的链接 <br>
 >     desc: 该blog的内容描述
 
 &emsp; <strong style="color: black;">（3）home.html的配置</strong>
