--- a/_posts/网站调试小技巧（moonwalk）/2024-11-29-2、新增专栏.md
+++ b/_posts/网站调试小技巧（moonwalk）/2024-11-29-2、新增专栏.md
@@ -22,13 +22,13 @@ categories: ["网站调试"]
 
 &emsp; 侧边栏中几个部分需要注意：
 
->（1）_includes：文件夹包含html文件是网站的显示配置，后面会详细说； <br>
-> (2) _layouts：文件夹包含网站如何显示的相关配置，这个后面会重点说； <br>
-> (3) _posts：文件夹包含所有的blog，后续想添加的话往这里按照格式添加就行； <br>
-> (4) _sass：文件夹包含网站模板样式的设置； <br>
-> (5) files：文件夹包含放到网站上的一些网页上下载的文件； <br>
-> (6) images：文件夹包含网站上用到的一些图片； <br>
-> (7) _config.yml：这个是网站内容的配置文件，非常重要。
+>(1)_includes：文件夹包含html文件是网站的显示配置，后面会详细说； <br>
+>(2) _layouts：文件夹包含网站如何显示的相关配置，这个后面会重点说； <br>
+>(3) _posts：文件夹包含所有的blog，后续想添加的话往这里按照格式添加就行； <br>
+>(4) _sass：文件夹包含网站模板样式的设置； <br>
+>(5) files：文件夹包含放到网站上的一些网页上下载的文件； <br>
+>(6) images：文件夹包含网站上用到的一些图片； <br>
+>(7) _config.yml：这个是网站内容的配置文件，非常重要。
 
 &emsp; <strong style="color: black;">（2）home.yml的配置</strong>
 
