--- a/_posts/网站调试小技巧（moonwalk）/2024-11-29-2、新增专栏.md
+++ b/_posts/网站调试小技巧（moonwalk）/2024-11-29-2、新增专栏.md
@@ -30,7 +30,7 @@ categories: ["网站调试"]
 >(6) images：文件夹包含网站上用到的一些图片； <br>
 >(7) _config.yml：这个是网站内容的配置文件，非常重要。
 
-| 序号 | 文件夹/文件       | 说明                                                         |
+<!-- | 序号 | 文件夹/文件       | 说明                                                         |
 |------|------------------|--------------------------------------------------------------|
 | (1)  | _includes        | 文件夹包含html文件是网站的显示配置，后面会详细说；             |
 | (2)  | _layouts         | 文件夹包含网站如何显示的相关配置，这个后面会重点说；             |
@@ -38,7 +38,7 @@ categories: ["网站调试"]
 | (4)  | _sass            | 文件夹包含网站模板样式的设置；                                 |
 | (5)  | files            | 文件夹包含放到网站上的一些网页上下载的文件；                   |
 | (6)  | images           | 文件夹包含网站上用到的一些图片；                               |
-| (7)  | _config.yml      | 这个是网站内容的配置文件，非常重要。                           |
+| (7)  | _config.yml      | 这个是网站内容的配置文件，非常重要。                           | -->
 
 &emsp; <strong style="color: black;">（2）home.yml的配置</strong>
 
