--- a/_posts/网站调试小技巧（moonwalk）/2024-11-29-2、新增专栏.md
+++ b/_posts/网站调试小技巧（moonwalk）/2024-11-29-2、新增专栏.md
@@ -30,15 +30,6 @@ categories: ["网站调试"]
 >(6) images       ：文件夹包含网站上用到的一些图片； <br>
 >(7) _config.yml  ：这个是网站内容的配置文件，非常重要。
 
-<!-- | 序号 | 文件夹/文件       | 说明                                                         |
-|------|------------------|--------------------------------------------------------------|
-| (1)  | _includes        | 文件夹包含html文件是网站的显示配置，后面会详细说；             |
-| (2)  | _layouts         | 文件夹包含网站如何显示的相关配置，这个后面会重点说；             |
-| (3)  | _posts           | 文件夹包含所有的blog，后续想添加的话往这里按照格式添加就行；     |
-| (4)  | _sass            | 文件夹包含网站模板样式的设置；                                 |
-| (5)  | files            | 文件夹包含放到网站上的一些网页上下载的文件；                   |
-| (6)  | images           | 文件夹包含网站上用到的一些图片；                               |
-| (7)  | _config.yml      | 这个是网站内容的配置文件，非常重要。                           | -->
 
 &emsp; <strong style="color: black;">（2）home.yml的配置</strong>
 
@@ -67,5 +58,21 @@ categories: ["网站调试"]
 {% endraw %}
 ```
 
-&emsp; 打开VSCode后，侧边栏如下：
+&emsp; 具体例子可以参考下面：
+<img src='/images/网站调试/2、新建专栏/1.3、home.html配置.jpg' width="1500" style="display: block; margin: 0 auto;">
+
+&emsp; 这三个参数在哪里添加在下面会说明，也可以用Ctrl+Shift+F直接查找然后修改模板。
+
+&emsp; <strong style="color: black;">（4）修改home.html中的参数</strong>
+
+&emsp; 1）专栏名字_projects + title_专栏名字_projects；
+
+&emsp; 这两个参数的相关配置在_config.yml中，详细介绍如下：
+<img src='/images/网站调试/2、新建专栏/1.4、两个参数.jpg' width="1500" style="display: block; margin: 0 auto;">
+
+&emsp; 2）专栏名字_entries；
+&emsp; 第三个参数在home.yml中，具体为下：
+<img src='/images/网站调试/2、新建专栏/1.5、第三个参数.jpg' width="1500" style="display: block; margin: 0 auto;">
+
+
  
