--- a/_posts/网站调试小技巧（moonwalk）/2024-11-29-2、新增专栏.md
+++ b/_posts/网站调试小技巧（moonwalk）/2024-11-29-2、新增专栏.md
@@ -34,7 +34,7 @@ categories: ["网站调试"]
 &emsp; <strong style="color: black;">（2）home.yml的配置</strong>
 
 &emsp; home.yml中是所有专栏、blog的总览，可以在这里选择是否使某个blog出现在网站上。
-<img src='/images/网站调试/2、新建专栏/1.2、home配置.jpg' width="1500" style="display: block; margin: 0 auto;">
+<img src='/images/网站调试/2、新建专栏/1.2、home.yml配置.jpg' width="1500" style="display: block; margin: 0 auto;">
 
 > project1_entries: # 这个是新建的专栏-project1 <br>
 >   - title : blog的标题 <br>
@@ -48,7 +48,10 @@ categories: ["网站调试"]
 
 &emsp; <strong style="color: black;">（3）home.html的配置</strong>
 
+&emsp; 配置完所有专栏的名字以及在网站上显示的blog，然后该配置html中显示的方式，具体例子可以参考下面：
+<img src='/images/网站调试/2、新建专栏/1.3、home.html配置.jpg' width="1500" style="display: block; margin: 0 auto;">
 
+&emsp; 每个专栏的html格式如下：
 ```html
 {% raw %}
 {% if site.theme_config.专栏名字_projects == true %}
@@ -58,12 +61,14 @@ categories: ["网站调试"]
 {% endraw %}
 ```
 
-&emsp; 具体例子可以参考下面：
-<img src='/images/网站调试/2、新建专栏/1.3、home.html配置.jpg' width="1500" style="display: block; margin: 0 auto;">
+&emsp; 这模板中的三个参数需要详细配置：
+> 专栏名字_projects       ： 是否显示该专栏，在_config.yml中配置 <br>
+> title_专栏名字_projects ： 该专栏的title，在_config.yml中配置 <br>
+> 专栏名字_entries        ： 该专栏显示的blog，在home.yml中配置
 
 &emsp; 这三个参数在哪里添加在下面会说明，也可以用Ctrl+Shift+F直接查找然后修改模板。
 
-&emsp; <strong style="color: black;">（4）修改home.html中的参数</strong>
+&emsp; <strong style="color: black;">（4）修改上述三个参数</strong>
 
 &emsp; 1）专栏名字_projects + title_专栏名字_projects；
 
