--- a/_posts/网站调试小技巧（moonwalk）/2024-11-29-2、新增专栏.md
+++ b/_posts/网站调试小技巧（moonwalk）/2024-11-29-2、新增专栏.md
@@ -79,5 +79,5 @@ categories: ["网站调试"]
 &emsp; 第三个参数在home.yml中，具体为下：
 <img src='/images/网站调试/2、新建专栏/1.5、第三个参数.jpg' width="1500" style="display: block; margin: 0 auto;">
 
-
- 
+&emsp; <strong style="color: black;">（5）总结</strong>
+&emsp; 新建一个专栏需要在两个配置文件中配置三个参数，然后在home.yml中在相应的专栏下添加该专栏的blog即可。
