--- a/_posts/网站调试小技巧（moonwalk）/2024-11-29-2、新增专栏.md
+++ b/_posts/网站调试小技巧（moonwalk）/2024-11-29-2、新增专栏.md
@@ -79,5 +79,12 @@ categories: ["网站调试"]
 &emsp; 第三个参数在home.yml中，具体为下：
 <img src='/images/网站调试/2、新建专栏/1.5、第三个参数.jpg' width="1500" style="display: block; margin: 0 auto;">
 
-&emsp; <strong style="color: black;">（5）总结</strong>
+&emsp; <strong style="color: black;">（5）总结与遇到的问题</strong>
 &emsp; 新建一个专栏需要在两个配置文件中配置三个参数，然后在home.yml中在相应的专栏下添加该专栏的blog即可。
+
+&emsp; 1）注意blog的命名格式
+&emsp; 文件命名格式为"年-月-日-文件名字.md"，注意，这里需要是真实的年月日，且年月日不能超过编辑blog的当天，否则会出错。
+
+&emsp; 2）blog首字母
+&emsp; 注意在"年-月-日-"后面的文件名字的首个字符不能是字母，如"2024-11-11-1、ABC.md"，否则也会报错。
+
