--- a/_posts/Publiccation/2024-11-26-人工智能导论.md
+++ b/_posts/Publiccation/2024-11-26-人工智能导论.md
@@ -5,3 +5,8 @@ categories: ["Publication"]
 ---
 
 人工智能导论
+<!-- 在 Markdown 文件中插入 HTML -->
+<video width="1200" controls>
+  <source src="/files/项目演示/项目讲解视频.mp4" type="video/mp4">
+  您的浏览器不支持 HTML5 视频标签。
+</video>
