--- a/_posts/Publiccation/2024-11-26-人工智能导论.md
+++ b/_posts/Publiccation/2024-11-26-人工智能导论.md
@@ -4,7 +4,7 @@ title: "人工智能导论"
 categories: ["Publication"]
 ---
 
-人工智能导论
+2022433007 李懿真
 <!-- 在 Markdown 文件中插入 HTML -->
 <video width="800" controls>
   <source src="/files/项目演示/项目讲解视频.mp4" type="video/mp4">
