--- a/_posts/妙妙工具/2024-10-29-3、键盘锁.md
+++ b/_posts/妙妙工具/2024-10-29-3、键盘锁.md
@@ -9,11 +9,16 @@ categories: ["妙妙工具"]
 键盘锁，即给键盘上锁。下面的5个软件都是从[这个帖子](https://www.52pojie.cn/thread-1176577-1-1.html)上下载的。
 
 ## Quick Jump
+- [3.0、在线键盘测试](https://www.zfrontier.com/lab/keyboardTester)
 - [3.1、KeyFreeze](http://hua-ao-yu.github.io/files/UsefulTools/KeyFreeze（键盘鼠标锁）.exe)
 - [3.2、键盘锁定工具](http://hua-ao-yu.github.io/files/UsefulTools/键盘锁定工具.exe)
 - [3.3、电脑键盘锁](http://hua-ao-yu.github.io/files/UsefulTools/电脑键盘锁.zip)
 - [3.4、键盘屏蔽器](http://hua-ao-yu.github.io/files/UsefulTools/键盘键位屏蔽器.exe)
 - [3.5、XWiNKEY](http://hua-ao-yu.github.io/files/UsefulTools/XWiNKEY.exe)
+
+#### &emsp; 3.0、键盘按键测试工具 <br> 
+&emsp; [https://www.zfrontier.com/lab/keyboardTester](https://www.zfrontier.com/lab/keyboardTester)这个网站可以仅限在线键盘测试。
+<img src='/images/skills/Useful Tools/3、键盘锁/3.0、在线按键测试工具.jpg' width="500" style="display: block; margin: 0 auto;">
 
 #### &emsp; 3.1、KeyFreeze <br> 
 
@@ -35,3 +40,6 @@ categories: ["妙妙工具"]
 #### &emsp; 3.5、XWiNKEY <br> 
 &emsp; [XWiNKEY](http://hua-ao-yu.github.io/files/UsefulTools/XWiNKEY.exe)通过勾选来选择禁用的键位。
 <img src='/images/skills/Useful Tools/3、键盘锁/3.5、XWiNKEY.jpg' width="300" style="display: block; margin: 0 auto;">
+
+
+
