--- a/_posts/妙妙工具/2024-11-01-0、无用但有趣.md
+++ b/_posts/妙妙工具/2024-11-01-0、无用但有趣.md
@@ -29,6 +29,7 @@ categories: ["妙妙工具"]
 - [0.18、赛博做旧，电子包浆](https://magiconch.com/patina/)
 - [0.19、缩写解释](https://lab.magiconch.com/nbnhhsh/)
 - [0.20、在线可玩小游戏](https://oldswf.com/)
+- [0.21、深海生物](https://neal.fun/deep-sea/)
 
 #### &emsp; 0.1、高精度IP查询 <br> 
 &emsp; 该[网站](https://chaipip.com/)可以高精度IP查询。
@@ -108,15 +109,6 @@ categories: ["妙妙工具"]
 &emsp; 该[网站](https://oldswf.com/)可以在线直接玩[Q版泡泡堂](https://oldswf.com/game/7120)等小游戏。
 <img src='/images/skills/Useful Tools/0、无用但有趣/0.20、在线可玩小游戏.png' width="500" style="display: block; margin: 0 auto;">
 
-#### &emsp; 0.21、查看电脑运行时间 <br> 
-&emsp; **方案一**。
-右击开始菜单，选择“Windows Powershell（管理员）”，然后输入：。
-```csharp
-(get-date) - (gcim Win32_OperatingSystem).LastBootUpTime
-```
-&emsp; **方案二**。
-在管理员：Windows Powershell窗口输入以下命令并回车，即可时光回溯，看到准确的开机时间：
-```csharp
-wmic path Win32_OperatingSystem get LastBootUpTime
-```
-<img src='/images/skills/Useful Tools/0、无用但有趣/0.21、查看电脑运行时间.png' width="500" style="display: block; margin: 0 auto;">
+#### &emsp; 0.21、深海生物 <br> 
+&emsp; 该[网站](https://neal.fun/deep-sea/)可以直观地查看10000M内不同深度的深海生物。
+<img src='/images/skills/Useful Tools/0、无用但有趣/0.21、深海生物.png' width="500" style="display: block; margin: 0 auto;">
