--- a/_posts/妙妙工具/2024-10-26-6、开发者狂喜.md
+++ b/_posts/妙妙工具/2024-10-26-6、开发者狂喜.md
@@ -37,4 +37,14 @@ categories: ["妙妙工具"]
 &emsp; 该[网站](https://www.xiusheji.com/special/fonts-free.html)可以下载可商用字体。
 <img src='/images/skills/Useful Tools/6、开发者狂喜/6.4、可商用字体.png' width="500" style="display: block; margin: 0 auto;"> <br>
 
+#### &emsp; 6.5、架空幻想地图生成网站 <br> 
+（该小节源自小黑盒文章《一些架空幻想地图生成网站》，作者Debiroity）
 
+&emsp; （1）中世纪城市随机生成器
+&emsp; 该[网站](https://watabou.itch.io/medieval-fantasy-city-generator)可以下载可商用字体，由watabou制作的中世纪城市随机生成器。
+<img src='/images/skills/Useful Tools/6、开发者狂喜/6.5.1、中世纪城市随机生成器1.jpg' width="500" style="display: block; margin: 0 auto;"> <br>
+&emsp; 整体风格相当吸引人，而且效果相当不错。支持加标志、修改城市名称、改颜色等等。 <br>
+<img src='/images/skills/Useful Tools/6、开发者狂喜/6.5.1、中世纪城市随机生成器2.jpg' width="500" style="display: block; margin: 0 auto;"> <br>
+<img src='/images/skills/Useful Tools/6、开发者狂喜/6.5.1、中世纪城市随机生成器3.jpg' width="500" style="display: block; margin: 0 auto;"> <br>
+&emsp; 这其实是一个系列生成器中的一部分，大家自行探索。 <br>
+<img src='/images/skills/Useful Tools/6、开发者狂喜/6.5.1、中世纪城市随机生成器4.jpg' width="500" style="display: block; margin: 0 auto;"> <br>
