--- a/_posts/树莓派/2024-11-01-0、树莓派调试目录.md
+++ b/_posts/树莓派/2024-11-01-0、树莓派调试目录.md
@@ -11,4 +11,4 @@ categories: ["树莓派"]
 
 
 ## 1、目录
-- [树莓派烧录系统](https://huaaorain.github.io/1-树莓派烧录系统)
+- [树莓派烧录系统](https://huaaorain.github.io/1-%E6%A0%91%E8%8E%93%E6%B4%BE%E7%83%A7%E5%BD%95%E7%B3%BB%E7%BB%9F)
