--- a/_posts/树莓派/2024-11-01-0、树莓派调试目录.md
+++ b/_posts/树莓派/2024-11-01-0、树莓派调试目录.md
@@ -11,4 +11,4 @@ categories: ["树莓派"]
 
 
 ## 1、目录
-- [树莓派烧录系统](https://huaaorain.github.io/1.Raspberry Pi system burning)
+- [树莓派烧录系统](https://huaaorain.github.io/1-树莓派烧录系统)
