--- a/_posts/树莓派/2024-10-30-2、树莓派接口介绍.md
+++ b/_posts/树莓派/2024-10-30-2、树莓派接口介绍.md
@@ -11,3 +11,36 @@ categories: ["树莓派"]
 
 <strong style="color: red;">（1）SOC芯片</strong><br>
 &emsp; 树莓派采用博通（Broadcom）BCM2711芯片作为SOC芯片，芯片上集成了CPU、GPU、DSP及SDRAM内存等，其中CPU和GPU共享内存，可以在系统中手工修改内存占比。4代的树莓派将内存变为了可选择的。<br> 
+
+<strong style="color: red;">（2）以太网接口</strong><br>
+&emsp; 以太网接口让树莓派能以有线的方式接入计算机网络，这让我们能轻松的访问互联网，或远程登录到树莓派。树莓派的以太网接口是利用USB总线实现的，数据通过USB总线进行传输，大部分型号的树莓派都提供有以太网接口。<br> 
+
+<strong style="color: red;">（3）USB接口</strong><br>
+&emsp; 通用串行总线（Universal Serial Bus, 简称USB）接口是计算机上最常见的接口，可以用它来连接键盘、鼠标、U盘、无线网卡等设备。当USB接口的数量不够用时，还可以通过USB集线器增加USB接口数量。<br> 
+
+<strong style="color: red;">（4）HDMI接口</strong><br>
+&emsp; 高清多媒体接口（High Definition Multimedia Interface，HDMI）是一种全数字化视频和声音发送接口，用于传输未压缩的音频及视频信号。通过它连接到配备有HDMI接口的显示器（或电视机）上，就能显示树莓派的内容。HDMI接口能够同时传输视频和音频信号，因此我们使用的时候不需要在树莓派的音频接口连接扬声器，确实需要通过音频接口播放声音的，则需对操作系统的配置做相应的修改。<br> 
+
+<strong style="color: red;">（5）音频及复合视频接口</strong><br>
+&emsp; 音频接口（3.5mm耳机插孔）在没有用到HDMI连接的时候，可以使用标准3.5mm耳机插孔的扬声器或耳机播放音频。同时，该接口还集成了复合视频接口，具有复合音视频输出功能，一般用于连接旧型号的电视机，当前已经很少使用。<br>
+
+<strong style="color: red;">（6）DSI显示器接口</strong><br>
+&emsp; 可以将LCD显示器连接到树莓派上，一般用于嵌入式产品开发。通常情况下，HDMI接口已经能满足需求。<br>
+
+<strong style="color: red;">（7）CSI摄像头接口</strong><br>
+&emsp; 利用CSI接口可以通过一条排线将CSI摄像头连接到树莓派上，轻松的进行视频录制和图像拍摄。与USB摄像头相比，这种摄像头模块的性能更为出色。<br>
+
+<strong style="color: red;">（8）通用输入输出接口（General Purpose Input Output，GPIO）</strong><br>
+&emsp; 通用输入输出接口（General Purpose Input Output，GPIO）在树莓派主板上被设计成具有两排引脚的插槽。GPIO可以用于连接各种外围电子设备和传感器，通过输入/输出电平信号，以控制或监控这些设备。例如，可以使用GPIO控制直流电机的转速，或是读取超声波传感器的测量距离等。GPIO的这些功能特性使得树莓派有别于普通计算机主板，因为它给予开发人员手工操作的自由。我们将在后续文章中对GPIO做进一步介绍，并大量的使用它们。<br>
+
+<strong style="color: red;">（9）SD卡插槽</strong><br>
+&emsp; SD卡插槽位于树莓派主板背面。SD/MicroSD卡是树莓派必备的存储部件，用于安装操作系统和存储数据，SD卡的容量应在2GB以上。为了能有更好的使用体验，建议为您的树莓派配备大容量（16G以上）的高速（Class10以上）的SD卡。<br>
+
+<strong style="color: red;">（10）Micro USB供电接口</strong><br>
+&emsp; Micro USB供电接口是树莓派主要的供电方式之一，额定电压5V，不同版本的树莓派的标准电流要求略有区别，例如：1B型只要700mA，而3B+型则需要2.5A，很多安卓（Android）手机的充电器都能为树莓派提供必要的电压和电流。树莓派的电流需求还与其连接的外部设备有关，建议在使用的时候应事先计算好，为树莓派选择合适电流（功率）的电源，当外接设备功率较大时，应该采用独立的电源为外部设备供电。<br>
+
+<strong style="color: red;">（11）WiFi及蓝牙模块</strong><br>
+&emsp; WiFi功能让树莓派能够以无线的方式接入计算机无线网络实现互联互通，蓝牙功能则让树莓派能与具备蓝牙功能的设备（如鼠标、键盘、手柄等）进行连接使用。目前，仅3B型、3B+型和Zero W型树莓派自带WiFi和蓝牙功能（两者集成在一个芯片上），对于其他型号的树莓派，您可以通过外接USB WiFi（蓝牙）适配器实现。我们将在后续章节对WiFi和蓝牙的使用作进一步介绍。<br>
+
+<strong style="color: red;">（12）以太网供电（PoE）接口</strong><br>
+&emsp; 有源以太网(Power Over Ethernet, PoE)是指利用以太网进行电力传输的一种技术。树莓派3B+型在原有的Micro USB和GPIO供电的基础上，新增了以太网供电方式，用户可以使用网线为树莓派供电，而不需要配置额外的电源，这为某些应用场景提供了极大的便利。<br>
