--- a/_posts/妙妙工具/2024-10-25-7、科研小妙招.md
+++ b/_posts/妙妙工具/2024-10-25-7、科研小妙招.md
@@ -49,3 +49,7 @@ categories: ["妙妙工具"]
 <img src='/images/skills/Useful Tools/7、科研小妙招/7.6、科研绘图配色5.png' width="800" style="display: block; margin: 0 auto;"> <br>
 <img src='/images/skills/Useful Tools/7、科研小妙招/7.6、科研绘图配色6.png' width="800" style="display: block; margin: 0 auto;"> <br>
 
+#### &emsp; 7.6、科研绘图配色 <br> 
+&emsp; [这个网站](https://allophane.com/#/)是一个大佬解读的一些有用的东西，比如[PlotNeuralNet](https://huaaorain.github.io/files/UsefulTools/7、科研小妙招/PlotNeuralNet-master.rar)（绘制神经网络结构的）。
+<img src='/images/skills/Useful Tools/7、科研小妙招/7.7、网络结构画图工具.png' width="800" style="display: block; margin: 0 auto;"> <br>
+
