--- a/_posts/妙妙工具/2024-10-25-7、科研小妙招.md
+++ b/_posts/妙妙工具/2024-10-25-7、科研小妙招.md
@@ -16,6 +16,7 @@ categories: ["妙妙工具"]
 - [7.4、GPT Academic](https://github.com/binary-husky/gpt_academic)
 - [7.5、知竹甘特图](https://zz-plan.com)
 - [7.6、科研绘图配色](https://zhuanlan.zhihu.com/p/670396774)
+- [7.7、神经网络绘制](https://allophane.com/#/)
 
 #### &emsp; 7.1、文献下载 <br> 
 &emsp; [谷歌学术](https://scholar.google.com.hk/?hl=zh-CN)可以免费下载几乎所有外文文献。
@@ -49,7 +50,7 @@ categories: ["妙妙工具"]
 <img src='/images/skills/Useful Tools/7、科研小妙招/7.6、科研绘图配色5.png' width="800" style="display: block; margin: 0 auto;"> <br>
 <img src='/images/skills/Useful Tools/7、科研小妙招/7.6、科研绘图配色6.png' width="800" style="display: block; margin: 0 auto;"> <br>
 
-#### &emsp; 7.6、科研绘图配色 <br> 
-&emsp; [这个网站](https://allophane.com/#/)是一个大佬解读的一些有用的东西，比如[PlotNeuralNet](https://huaaorain.github.io/files/UsefulTools/7、科研小妙招/PlotNeuralNet-master.rar)（绘制神经网络结构的）。
+#### &emsp; 7.7、神经网络绘制 <br> 
+&emsp; [这个网站](https://allophane.com/#/)是一个大佬解读的一些有用的东西，比如[PlotNeuralNet](https://huaaorain.github.io/files/UsefulTools/7、科研小妙招/PlotNeuralNet-master.rar)（绘制神经网络结构的），这位大佬也做了相应的[视频讲解](https://www.bilibili.com/video/BV13L4y1p7g6/?spm_id_from=333.337.search-card.all.click&vd_source=d5bf9778119412295721f01394ea745e)。
 <img src='/images/skills/Useful Tools/7、科研小妙招/7.7、网络结构画图工具.png' width="800" style="display: block; margin: 0 auto;"> <br>
 
