--- a/_posts/妙妙工具/2024-10-31-1、实用工具.md
+++ b/_posts/妙妙工具/2024-10-31-1、实用工具.md
@@ -1,27 +1,28 @@
 ---
 layout: post
 author: Abhinav Saxena
-title: "1、批量修改文件名字、图片大小"
+title: "1、实用工具"
 tags: [tools, moonwalk]
 categories: ["妙妙工具"]
 ---
 
-## 1、批量修改图片大小和名字
-
 ## Quick Jump
+#### 1、批量修改图片大小和名字
 - [1.1、批量重命名](http://huaaorain.github.io/files/UsefulTools/1、批量修改/批量修改文件名_4.01.exe)
 - [1.2、批量修改大小](http://huaaorain.github.io/files/UsefulTools/1、批量修改/批量更改图大小.exe)
 
+## 1、批量修改图片大小和名字
+
 #### &emsp; 1.1、批量重命名： <br>
 &emsp; 该[软件](http://huaaorain.github.io/files/UsefulTools/1、批量修改/批量修改文件名_4.01.exe) 可以批量对文件进行重命名，包括添加、删除、替换等功能，下面是操作界面及简述：
-<br> <img src='/images/skills/Useful Tools/1、批量修改/1.1、批量重命名文件.jpg' width="1000" style="display: block; margin: 0 auto;"> <br>
+<br> <img src='/images/skills/Useful Tools/1、实用工具/1.1、批量重命名文件.jpg' width="1000" style="display: block; margin: 0 auto;"> <br>
 
 #### &emsp; 1.2、批量修改大小： <br>
 &emsp; 该[软件](http://huaaorain.github.io/files/UsefulTools/1、批量修改/批量更改图大小.exe) 可用于批量调整图片大小，下面是操作界面及简述：<br>
 &emsp; （1）点击文件夹_pages中的about.md <br>
-<img src='/images/skills/Useful Tools/1、批量修改/1.2、批量更改图片大小1.jpg' width="1000" style="display: block; margin: 0 auto;">
-<img src='/images/skills/Useful Tools/1、批量修改/1.2、批量更改图片大小2.jpg' width="1000" style="display: block; margin: 0 auto;">
-<img src='/images/skills/Useful Tools/1、批量修改/1.2、批量更改图片大小3.jpg' width="1000" style="display: block; margin: 0 auto;">
-<img src='/images/skills/Useful Tools/1、批量修改/1.2、批量更改图片大小4.jpg' width="1000" style="display: block; margin: 0 auto;">
+<img src='/images/skills/Useful Tools/1、实用工具/1.2、批量更改图片大小1.jpg' width="1000" style="display: block; margin: 0 auto;">
+<img src='/images/skills/Useful Tools/1、实用工具/1.2、批量更改图片大小2.jpg' width="1000" style="display: block; margin: 0 auto;">
+<img src='/images/skills/Useful Tools/1、实用工具/1.2、批量更改图片大小3.jpg' width="1000" style="display: block; margin: 0 auto;">
+<img src='/images/skills/Useful Tools/1、实用工具/1.2、批量更改图片大小4.jpg' width="1000" style="display: block; margin: 0 auto;">
 
 
