--- a/_posts/妙妙工具/2024-11-01-0、无用但有趣.md
+++ b/_posts/妙妙工具/2024-11-01-0、无用但有趣.md
@@ -19,12 +19,12 @@ categories: ["妙妙工具"]
 - [0.8、在线弹钢琴](https://www.autopiano.cn/zh-TW/post/1425)
 - [0.9、假文生成器](https://www.lddgo.net/string/lorem-ipsum)
 - [0.10、寻找鼠标](https://pointerpointer.com/)
-- [0.11、没用的网站（推荐）](theuselessweb.com)
-- [0.12、舔狗日记](jlwz.cn/dog)
-- [0.13、Windows 93（有趣）](windows93.net)
-- [0.14、家常菜谱大全（实用）](cook.yunyoujun.cn)
-- [0.15、在线捏猫](niemao.top)
-- [0.16、emoji合成器（好玩）](emoji6.com/emojimix)
+- [0.11、没用的网站（推荐）](https://theuselessweb.com)
+- [0.12、舔狗日记](https://jlwz.cn/dog)
+- [0.13、Windows 93（有趣）](https://windows93.net)
+- [0.14、家常菜谱大全（实用）](https://cook.yunyoujun.cn)
+- [0.15、在线捏猫](https://niemao.top)
+- [0.16、emoji合成器（好玩）](https://emoji6.com/emojimix)
 - [0.17、神奇海螺试验场（有趣）](https://lab.magiconch.com/)
 - [0.18、赛博做旧，电子包浆](https://magiconch.com/patina/)
 - [0.19、缩写解释](https://lab.magiconch.com/nbnhhsh/)
@@ -70,27 +70,27 @@ categories: ["妙妙工具"]
 <img src='/images/skills/Useful Tools/0、无用但有趣/0.10、寻找鼠标.png' width="500" style="display: block; margin: 0 auto;">
 
 #### &emsp; 0.11、没用的网站（推荐） <br> 
-&emsp; 该[网站](theuselessweb.com)会随机出来一些有趣的网站，点击即可进入。
+&emsp; 该[网站](https://theuselessweb.com)会随机出来一些有趣的网站，点击即可进入。
 <img src='/images/skills/Useful Tools/0、无用但有趣/0.11、没用的网站.png' width="500" style="display: block; margin: 0 auto;">
 
 #### &emsp; 0.12、舔狗日记 <br> 
-&emsp; 该[网站](jlwz.cn/dog)会随机出现各种各样的舔狗语录。
+&emsp; 该[网站](https://jlwz.cn/dog)会随机出现各种各样的舔狗语录。
 <img src='/images/skills/Useful Tools/0、无用但有趣/0.12、舔狗日记.png' width="500" style="display: block; margin: 0 auto;">
 
 #### &emsp; 0.13、Windows 93（有趣） <br> 
-&emsp; 该[网站](windows93.net)提供了一个网页版的Windows93，并且提供了一些小游戏和大量现代网络文化和幽默元素。
+&emsp; 该[网站](https://windows93.net)提供了一个网页版的Windows93，并且提供了一些小游戏和大量现代网络文化和幽默元素。
 <img src='/images/skills/Useful Tools/0、无用但有趣/0.13、Windows93.png' width="500" style="display: block; margin: 0 auto;">
 
 #### &emsp; 0.14、家常菜谱大全（实用） <br> 
-&emsp; 该[网站](cook.yunyoujun.cn)可以选择几种食材+厨具，然后生成一些可以组合出来的菜谱，点进去即跳转到B站视频教程。
+&emsp; 该[网站](https://cook.yunyoujun.cn)可以选择几种食材+厨具，然后生成一些可以组合出来的菜谱，点进去即跳转到B站视频教程。
 <img src='/images/skills/Useful Tools/0、无用但有趣/0.14、组合菜谱.png' width="500" style="display: block; margin: 0 auto;">
 
 #### &emsp; 0.15、在线捏猫（及其他网站） <br> 
-&emsp; 该[网站](niemao.top)可以在线捏猫，**此外在网站下方还提供了许多其他有意思的东西**。
+&emsp; 该[网站](https://niemao.top)可以在线捏猫，**此外在网站下方还提供了许多其他有意思的东西**。
 <img src='/images/skills/Useful Tools/0、无用但有趣/0.15、在线捏猫.png' width="500" style="display: block; margin: 0 auto;">
 
 #### &emsp; 0.16、emoji合成器（好玩） <br> 
-&emsp; 该[网站](emoji6.com/emojimix)可以制定或随机合成emoji。
+&emsp; 该[网站](https://emoji6.com/emojimix)可以制定或随机合成emoji。
 <img src='/images/skills/Useful Tools/0、无用但有趣/0.16、emoji合成器.png' width="500" style="display: block; margin: 0 auto;">
 
 #### &emsp; 0.17、神奇海螺试验场（有趣） <br> 
