--- a/_posts/妙妙工具/2024-11-01-0、无用但有趣.md
+++ b/_posts/妙妙工具/2024-11-01-0、无用但有趣.md
@@ -24,7 +24,7 @@ categories: ["妙妙工具"]
 - [0.13、Windows 93（有趣）](https://windows93.net)
 - [0.14、家常菜谱大全（实用）](https://cook.yunyoujun.cn)
 - [0.15、在线捏猫](https://niemao.top)
-- [0.16、emoji合成器（好玩）](https://emoji6.com/emojimix)
+- [0.16、emoji合成器（好玩）](https://emoji6.com)
 - [0.17、神奇海螺试验场（有趣）](https://lab.magiconch.com/)
 - [0.18、赛博做旧，电子包浆](https://magiconch.com/patina/)
 - [0.19、缩写解释](https://lab.magiconch.com/nbnhhsh/)
@@ -90,7 +90,7 @@ categories: ["妙妙工具"]
 <img src='/images/skills/Useful Tools/0、无用但有趣/0.15、在线捏猫.png' width="500" style="display: block; margin: 0 auto;">
 
 #### &emsp; 0.16、emoji合成器（好玩） <br> 
-&emsp; 该[网站](https://emoji6.com/emojimix)可以制定或随机合成emoji。
+&emsp; 该[网站](https://emoji6.com)可以制定或随机合成emoji。
 <img src='/images/skills/Useful Tools/0、无用但有趣/0.16、emoji合成器.png' width="500" style="display: block; margin: 0 auto;">
 
 #### &emsp; 0.17、神奇海螺试验场（有趣） <br> 
